# cudaSDR-1

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/res/: dialog_screenshots.odt
Source/src/: cusdr_NoiseFilterWidget.cpp  cusdr_NoiseFilterWidget.h  cusdr_agcWidget.cpp  cusdr_displayWidget.cpp  cusdr_displayWidget.h  cusdr_fonts.cpp  cusdr_hamDatabase.h  cusdr_hpsdrWidget.cpp  cusdr_mainWidget.cpp  cusdr_mainWidget.h  cusdr_radioPopupWidget.cpp  cusdr_radioTabWidget.cpp  cusdr_radioTabWidget.h  cusdr_radioWidget.cpp  cusdr_settings.cpp  cusdr_settings.h  main.cpp  setup.ui
Source/src/DataEngine/: cusdr_WidebandProcessor.cpp  cusdr_WidebandProcessor.h  cusdr_dataEngine.cpp  cusdr_dataEngine.h  cusdr_dataIO.cpp  cusdr_dataIO.h  cusdr_receiver.cpp  cusdr_receiver.h
Source/src/GL/: cusdr_oglDisplayPanel.cpp  cusdr_oglDisplayPanel.h  cusdr_oglDistancePanel.cpp  cusdr_oglDistancePanel.h  cusdr_oglInfo.cpp  cusdr_oglInfo.h  cusdr_oglReceiverPanel.cpp  cusdr_oglReceiverPanel.h  cusdr_oglText.cpp  cusdr_oglText.h  cusdr_oglUtils.h  cusdr_oglWidebandPanel.cpp  cusdr_oglWidebandPanel.h  glshadersimple.cpp  glshadersimple.h  glspectrum.cpp
Source/src/QtDSP/: qtdsp_dspEngine.cpp  qtdsp_dspEngine.h  qtdsp_dualModeAverager.cpp  qtdsp_fft.cpp  qtdsp_fft.h  qtdsp_qComplex.h  qtdsp_signalMeter.cpp  qtdsp_signalMeter.h
Source/src/QtWDSP/: qtwdsp_dspEngine.cpp  qtwdsp_dspEngine.h
Source/src/UI/: NoiseFilterWidget.pro  _minimode_widget.cpp  band_widget.cpp  band_widget.h  band_widget.ui  basewidget.cpp  basewidget.h  cusdr_display.cpp  cusdr_display.h  cusdr_display.ui  display_ctrl.ui  filter_widget.cpp  filter_widget.h  filter_widget.ui  mini_mode_widget.cpp  mini_mode_widget.h  mini_mode_widget.ui  mode_widget.cpp  mode_widget.h  mode_widget.ui  newbandwidget.cpp  newbandwidget.h  newbandwidget.ui  noisefilterwidget.cpp  noisefilterwidget.h  noisefilterwidget.ui  radio_ctrl.ui  radio_widget.cpp  radio_widget.h  setupwidget.cpp  setupwidget.h  setupwidget.ui  test.ui
Source/src/Util/: cusdr_queue.h  cusdr_styles.h
